# thulp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  PACKAGES.md  README.md  VENDOR.md  index.html
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/thulp-adapter/: Cargo.toml  README.md
crates/thulp-adapter/src/: lib.rs
crates/thulp-browser/: Cargo.toml  README.md
crates/thulp-browser/src/: cdp.rs  lib.rs
crates/thulp-cli/: Cargo.toml  README.md
crates/thulp-cli/src/: main.rs  output.rs
crates/thulp-cli/src/commands/: config.rs  convert.rs  mcp.rs  mod.rs  skill.rs  tools.rs
crates/thulp-cli/tests/: cli_integration.rs
crates/thulp-core/: Cargo.toml  README.md
crates/thulp-core/benches/: tool_benchmarks.rs
crates/thulp-core/src/: error.rs  lib.rs  mcp.rs  parameter.rs  tool.rs  traits.rs
crates/thulp-guidance/: Cargo.toml  README.md
crates/thulp-guidance/src/: lib.rs
crates/thulp-mcp/: Cargo.toml  README.md
crates/thulp-mcp/src/: ares_integration.rs  client.rs  error.rs  lib.rs  prompts.rs  resources.rs  transport.rs
crates/thulp-query/: Cargo.toml  README.md
crates/thulp-query/src/: lib.rs
crates/thulp-registry/: Cargo.toml  README.md
crates/thulp-registry/src/: lib.rs
crates/thulp-skill-files/: Cargo.toml  README.md
crates/thulp-skill-files/src/: error.rs  frontmatter.rs  lib.rs  loader.rs  parser.rs  preprocessor.rs
crates/thulp-skills/: Cargo.toml  README.md
crates/thulp-skills/src/: config.rs  default_executor.rs  executor.rs  hooks.rs  lib.rs  retry.rs  timeout.rs
crates/thulp-workspace/: Cargo.toml  README.md
crates/thulp-workspace/src/: filter.rs  lib.rs  session.rs  session_manager.rs
docs/: API_DESIGN.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_STATUS.md  PACKAGES.md  PROJECT_OVERVIEW.md  ROADMAP.md  TESTING_STRATEGY.md  VENDOR.md  config.toml
docs/public/: index.html  robots.txt  sitemap.xml
docs/templates/: index.html
examples/: Cargo.toml  adapter_example.rs  mcp_example.rs  query_example.rs  registry_example.rs  skills_example.rs  tool_definition_example.rs
