[package]
name = "thulp-adapter"
version.workspace = true
edition.workspace = true

[lib]
name = "thulp_adapter"
path = "src/lib.rs"

[dependencies]
thulp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex = "1.10"
