[package]
name = "thulp-adapter"
version = "0.2.0"
edition = "2021"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Adapter for converting external tool definitions to thulp format"
rust-version = "1.75"

[lib]
name = "thulp_adapter"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.10"
