[package]
name = "thulp-browser"
version.workspace = true
edition.workspace = true

[lib]
name = "thulp_browser"
path = "src/lib.rs"

[dependencies]
thulp-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
