[package]
name = "thulp-browser"
version = "0.3.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Browser automation tools for thulp"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_browser"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.3.0" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CDP dependencies (optional)
uuid = { version = "1.0", features = ["v4"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = []
cdp = ["uuid", "base64"]
