[package]
name = "thulp-cli"
version = "0.1.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "CLI for thulp - Execution context engineering platform"
rust-version = "1.75"

edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for thulp - Execution context engineering platform"
rust-version = "0.1.0"

[[bin]]
name = "thulp"
path = "src/main.rs"

[dependencies]
thulp-core = { version = "0.1.0" }
thulp-mcp = { version = "0.1.0", optional = true }
thulp-adapter = { version = "0.1.0" }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = []
mcp = ["dep:thulp-mcp"]
