[package]
name = "thulp-cli"
version = "0.3.0"
edition = "2021"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "CLI for thulp - Execution context engineering platform"
rust-version = "1.75"

[[bin]]
name = "thulp"
path = "src/main.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.3.0" }
thulp-mcp = { path = "../thulp-mcp", version = "0.3.0", optional = true }
thulp-adapter = { path = "../thulp-adapter", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"

[features]
default = []
mcp = ["dep:thulp-mcp"]
