[package]
name = "thulp-core"
version = "0.1.0"
edition = "2021"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Core types and traits for thulp"
rust-version = "1.75"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "tool_benchmarks"
harness = false
