[package]
name = "thulp-guidance"
version = "0.3.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "LLM guidance and orchestration for thulp"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_guidance"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
serde_json = "1.0"
