[package]
name = "thulp-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "thulp_mcp"
path = "src/lib.rs"

[dependencies]
thulp-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# rs-utcp integration for MCP protocol
rs-utcp = { version = "0.3" }

# ares-server - optional integration for production-grade MCP support
# Patched via root [patch.crates-io] to avoid workspace conflict
ares-server = { version = "0.3.0", default-features = false, features = ["ares-vector"], optional = true }

[features]
default = []
ares = ["dep:ares-server"]
