[package]
name = "thulp-mcp"
version = "0.2.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "MCP (Model Context Protocol) integration for thulp"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_mcp"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.2.0" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }

# rs-utcp integration for MCP protocol
rs-utcp = { version = "0.3" }

# ares-server - optional integration for production-grade MCP support
# Patched via root [patch.crates-io] to avoid workspace conflict
ares-server = { version = "0.3.0", default-features = false, features = ["ares-vector"], optional = true }

[features]
default = []
ares = ["dep:ares-server"]
