[package]
name = "thulp-mcp"
version = "0.3.1"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "MCP (Model Context Protocol) integration for thulp"
readme = "README.md"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_mcp"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.3.1" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }

# rs-utcp integration for MCP protocol
rs-utcp = { version = "0.3" }

# ares-server - optional integration for production-grade tool registry
# Real integration (not a stub): wraps ares_server::ToolRegistry and
# exposes registered tools (Calculator, optional WebSearch) to thulp.
ares-server = { version = "0.7.2", default-features = false, optional = true }

[features]
default = []
# Enable the ares_integration module (Calculator only by default)
ares = ["dep:ares-server"]
# Also register ares-server's WebSearch tool (requires search-tools feature)
ares-search = ["ares", "ares-server/search-tools"]
