[package]
name = "thulp-query"
version.workspace = true
edition.workspace = true

[lib]
name = "thulp_query"
path = "src/lib.rs"

[dependencies]
thulp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nom = { workspace = true }
thiserror.workspace = true
regex = "1.12.2"
