[package]
name = "thulp-query"
version = "0.1.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Query engine for searching and filtering thulp tools"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_query"
path = "src/lib.rs"

[dependencies]
thulp-core = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
thiserror = "2.0"
regex = "1.12.2"
