[package]
name = "thulp-registry"
version = "0.1.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Tool registry and management for thulp"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_registry"
path = "src/lib.rs"

[dependencies]
thulp-core = { version = "0.1.0" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
