[package]
name = "thulp-skills"
version = "0.2.0"
authors = ["Dirmacs <contact@dirmacs.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirmacs/thulp"
description = "Skill composition and execution for thulp"
rust-version = "1.75"

edition = "2021"

[lib]
name = "thulp_skills"
path = "src/lib.rs"

[dependencies]
thulp-core = { path = "../thulp-core", version = "0.2.0" }
thulp-mcp = { path = "../thulp-mcp", version = "0.2.0", optional = true }
thulp-query = { path = "../thulp-query", version = "0.2.0" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tera = "1.20"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
fastrand = "2.0"

[features]
default = []
mcp = ["dep:thulp-mcp"]
