[package]
name = "thulp-workspace"
version = "0.1.0"
edition = "2021"

[lib]
name = "thulp_workspace"
path = "src/lib.rs"

[dependencies]
thulp-core = { version = "0.1.0" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
serde_json = "1.0"
